--- a/doc/DokumenSkripsi/Bab/bab3.tex
+++ b/doc/DokumenSkripsi/Bab/bab3.tex
@@ -11,7 +11,7 @@ Portal Akademik Mahasiswa merupakan sebuah situs jaringan yang diperuntukan bagi
 	\label{fig:3_pam_home}
 \end{figure}
 
-Pada halaman utama Portal Akademik Mahasiswa (gambar \ref{fig:3_pam_home}), terdapat beberapa bagian yaitu:
+Pada halaman utama Portal Akademik Mahasiswa (Gambar \ref{fig:3_pam_home}), terdapat beberapa bagian yaitu:
 \begin{enumerate}
 	\item Menu Atas\\
 	Menu ini berfungsi sebagai menu pendukung yang terdiri dari : 
@@ -55,7 +55,7 @@ Pada halaman utama Portal Akademik Mahasiswa (gambar \ref{fig:3_pam_home}), terd
 	\end{itemize}
 	
 	\item Identitas Portal \\
-	Bagian ini menampilkan identitas pengguna portal. Tampilan identitas ini dapat ditampilkan lengkap dengan melakukan klik pada \textit{link} ``selengkapnya'' atau ditampilkan minimal dengan klik \textit{link} ``tutup''. Identitas yang ditampilkan adalah nama, Nomor Pokok Mahasiswa (NPM), status keaktifan, pas foto, email, dosen wali, program studi, dan fakultas seperti yang terlihat pada gambar \ref{fig:3_pam_identitas}.   
+	Bagian ini menampilkan identitas pengguna portal. Tampilan identitas ini dapat ditampilkan lengkap dengan melakukan klik pada \textit{link} ``selengkapnya'' atau ditampilkan minimal dengan klik \textit{link} ``tutup''. Identitas yang ditampilkan adalah nama, Nomor Pokok Mahasiswa (NPM), status keaktifan, pas foto, email, dosen wali, program studi, dan fakultas seperti yang terlihat pada Gambar \ref{fig:3_pam_identitas}.   
 	\begin{figure}[H]
 			\centering
 			\includegraphics[scale=0.75]{Gambar/pam-identitas}
@@ -64,7 +64,7 @@ Pada halaman utama Portal Akademik Mahasiswa (gambar \ref{fig:3_pam_home}), terd
 		\end{figure}
 		
 	\item Menu Utama\\
-	Bagian ini memuat fitur utama Portal Akademik Mahasiswa mengenai data akademik (gambar \ref{fig:3_pam_utama}) yang terdiri dari:
+	Bagian ini memuat fitur utama Portal Akademik Mahasiswa mengenai data akademik (Gambar \ref{fig:3_pam_utama}) yang terdiri dari:
 		\begin{figure}[H]
 			\centering
 			\includegraphics[scale=0.75]{Gambar/pam-utama}
@@ -196,7 +196,7 @@ pilihan ``Seluruh Tahun Akademik'' untuk melihat seluruh nilai berdasarkan semes
 		\end{itemize}
 		
 	\item \textbf{Informasi}\\
-		Bagian ini menampilkan informasi tentang periode-periode yang sedang aktif (Gambar \ref{fig:3_pam_utama_informasi}). Sebagai contoh jika ``Periode Registrasi'' diklik maka akan muncul \textit{pop up} seperti pada gambar \ref{fig:3_pam_utama_informasipop}.
+		Bagian ini menampilkan informasi tentang periode-periode yang sedang aktif (Gambar \ref{fig:3_pam_utama_informasi}). Sebagai contoh jika ``Periode Registrasi'' diklik maka akan muncul \textit{pop up} seperti pada Gambar \ref{fig:3_pam_utama_informasipop}.
 			\begin{figure}[H]
 				\centering
 				\includegraphics[scale=0.75]{Gambar/pam-utama-informasi}
@@ -248,7 +248,7 @@ Dalam menganalisis kebutuhan Informatika Student Portal, peneliti melakukan wawa
 	\item Perubahan IPS dan IPK berdasarkan riwayat nilai\\
 	Dalam Portal Akademik Mahasiswa, nilai pertama kali muncul dalam riwayat nilai. Riwayat IP tidak berubah secara otomatis saat seluruh nilai di riwayat nilai sudah muncul. Mahasiswa menginginkan agar IPS dan IPK dapat berubah secara otomatis saat nilai muncul.
 	\item Jadwal kuliah yang tersusun\\
-	Tampilan jadwal kuliah dalam Portal Akademik Mahasiswa tidak terurut berdasarkan hari seperti pada gambar \ref{fig:3_jadwal_portal} sehingga perlu direkapitulasi lagi. Mahasiswa menginginkan agar tampilan jadwal tersusun dan dalam bentuk seperti gambar \ref{fig:3_jadwal_rekap}.
+	Tampilan jadwal kuliah dalam Portal Akademik Mahasiswa tidak terurut berdasarkan hari seperti pada Gambar \ref{fig:3_jadwal_portal} sehingga perlu direkapitulasi lagi. Mahasiswa menginginkan agar tampilan jadwal tersusun dan dalam bentuk seperti Gambar \ref{fig:3_jadwal_rekap}.
 		\begin{figure}[H]
 			\centering
 			\includegraphics[scale=0.5]{Gambar/jadwal-portal}
@@ -394,7 +394,7 @@ Di halaman utama Portal Akademik Mahasiswa, mahasiswa dapat melihat riwayat nila
 	\item Setelah diklik, akan muncul list ``ul.hidden'', kemudian mahasiswa harus mengklik elemen ``a'' dengan teks ``Riwayat Per Semester'' (Gambar \ref{fig:3_case_nilai_menu})
 	\begin{figure}[H]
 			\centering
-			\includegraphics[scale=0.5]{Gambar/case-nilai-menu}
+			\includegraphics[scale=0.4]{Gambar/case-nilai-menu}
 			\caption{Elemen ``a'' dengan teks ``Riwayat Per Semester'' pada Menu Nilai dan Indeks Prestasi} 
 			\label{fig:3_case_nilai_menu}
 		\end{figure}
@@ -406,7 +406,7 @@ Di halaman utama Portal Akademik Mahasiswa, mahasiswa dapat melihat riwayat nila
 		
 		\begin{figure}[H]
 			\centering
-			\includegraphics[scale=0.5]{Gambar/case-nilai-pilih}
+			\includegraphics[scale=0.4]{Gambar/case-nilai-pilih}
 			\caption{\textit{Combo Box} ``select\#tahun\_akd\_sec'' pada Halaman Riwayat Per Semester} 
 			\label{fig:3_case_nilai_pilih}
 		\end{figure}
@@ -420,7 +420,7 @@ Di halaman utama Portal Akademik Mahasiswa, mahasiswa dapat melihat riwayat nila
 		
 		\begin{figure}[H]
 			\centering
-			\includegraphics[scale=0.5]{Gambar/case-nilai}
+			\includegraphics[scale=0.4]{Gambar/case-nilai}
 			\caption{\textit{Form Data} pada pengiriman Nilai Seluruh Tahun Akademik} 
 			\label{fig:3_case_nilai}
 		\end{figure}
@@ -433,7 +433,7 @@ Di halaman utama Portal Akademik Mahasiswa, mahasiswa dapat melihat jadwal denga
 	\item Setelah diklik, akan muncul list ``ul.hidden'', kemudian mahasiswa harus mengklik elemen ``a'' dengan teks ``Kuliah, UTS dan UAS''(Gambar \ref{fig:3_case_jadwal_menu})
 	\begin{figure}[H]
 			\centering
-			\includegraphics[scale=0.5]{Gambar/case-jadwal-menu}
+			\includegraphics[scale=0.4]{Gambar/case-jadwal-menu}
 			\caption{Elemen ``a'' dengan teks ``Kuliah, UTS dan UAS'' pada Menu Jadwal} 
 			\label{fig:3_case_jadwal_menu}
 		\end{figure}
@@ -445,7 +445,7 @@ Di halaman utama Portal Akademik Mahasiswa, mahasiswa dapat melihat jadwal denga
 		
 		\begin{figure}[H]
 			\centering
-			\includegraphics[scale=0.5]{Gambar/case-jadwal-pilih}
+			\includegraphics[scale=0.4]{Gambar/case-jadwal-pilih}
 			\caption{Combo Box ``select\#tahun\_akd\_sec'' pada Halaman Jadwal Kuliah, UTS, dan UAS} 
 			\label{fig:3_case_jadwal_pilih}
 		\end{figure}
@@ -459,7 +459,7 @@ Di halaman utama Portal Akademik Mahasiswa, mahasiswa dapat melihat jadwal denga
 		
 		\begin{figure}[H]
 			\centering
-			\includegraphics[scale=0.5]{Gambar/case-jadwal}
+			\includegraphics[scale=0.4]{Gambar/case-jadwal}
 			\caption{\textit{Form Data} pada pengiriman Jadwal Kuliah dan Ujian} 
 			\label{fig:3_case_jadwal}
 		\end{figure}
@@ -471,7 +471,7 @@ Mahasiswa juga dapat melihat jadwal seluruh fakultas dengan cara:
 	\item Mengklik ``a.second-line-menu'' dengan teks ``Seluruh Fakultas'' pada \textit{list} ``ul.hidden'' (Gambar \ref{fig:3_case_jadwal_seluruh})
 	\begin{figure}[H]
 			\centering
-			\includegraphics[scale=0.5]{Gambar/case-jadwal-seluruh}
+			\includegraphics[scale=0.4]{Gambar/case-jadwal-seluruh}
 			\caption{Elemen ``a'' dengan teks ``Seluruh Fakultas'' pada Menu Jadwal} 
 			\label{fig:3_case_jadwal_seluruh}
 		\end{figure}
@@ -482,7 +482,7 @@ Mahasiswa juga dapat melihat jadwal seluruh fakultas dengan cara:
 		\item Halaman ``Seluruh Fakultas'' menampilkan seluruh jadwal semester terkini pada fakultas tempat mahasiswa menempuh studi. Jika ingin melihat jadwal semester sebelumnya, mahasiswa dapat mengklik \textit{combo box} ``select\#tahun\_akd\_sec'' kemudian memilih ``option'' yang diinginkan. Jika ingin melihat jadwal fakultas lain, mahasiswa dapat mengklik \textit{combo box} ``select\#jadwal\_all\_ps'' kemudian memilih ``option'' fakultas yang diinginkan (Gambar \ref{fig:3_case_jadwal_pilihfak}).
 		\begin{figure}[H]
 			\centering
-			\includegraphics[scale=0.5]{Gambar/case-jadwal-pilihfak}
+			\includegraphics[scale=0.4]{Gambar/case-jadwal-pilihfak}
 			\caption{Combo Box ``select\#jadwal\_all\_ps'' pada Halaman Jadwal Seluruh Fakultas} 
 			\label{fig:3_case_jadwal_pilihfak}
 		\end{figure}
@@ -495,7 +495,7 @@ Mahasiswa juga dapat melihat jadwal seluruh fakultas dengan cara:
 		
 		\begin{figure}[H]
 			\centering
-			\includegraphics[scale=0.5]{Gambar/case-jadwal-fakultas}
+			\includegraphics[scale=0.4]{Gambar/case-jadwal-fakultas}
 			\caption{\textit{Form Data} pada pengiriman Jadwal Seluruh Fakultas} 
 			\label{fig:3_case_jadwal_fakultas}
 		\end{figure}
@@ -507,7 +507,7 @@ Mahasiswa dapat melakukan \textit{logout} dengan cara:
 	\item Mengklik ``a'' dengan teks ``logout'' pada bagian identitas portal (Gambar \ref{fig:3_case_logout_link})
 	\begin{figure}[H]
 			\centering
-			\includegraphics[scale=0.5]{Gambar/case-logout-link}
+			\includegraphics[scale=0.4]{Gambar/case-logout-link}
 			\caption{Elemen ``a'' dengan teks ``logout'' pada Identitas Portal} 
 			\label{fig:3_case_logout_link}
 		\end{figure}
@@ -518,14 +518,14 @@ Mahasiswa dapat melakukan \textit{logout} dengan cara:
 	\item Kemudian dilakukan pengalihan ke \url{https://cas.unpar.ac.id/logout?service=https\%3A\%2F\%2Fstudentportal.unpar.ac.id} lalu mengadaluarsakan \textit{cookie} CASTGC dan CASPRIVACY yang sebelumnya di-\textit{set} saat pengalihan ke halaman utama (Gambar \ref{fig:3_case_logout_expires}) 
 			\begin{figure}[H]
 				\centering
-				\includegraphics[scale=0.5]{Gambar/case-logout-expires}
+				\includegraphics[scale=0.4]{Gambar/case-logout-expires}
 				\caption{Pengadaluarsaan Cookie CASTGC dan CASPRIVACY} 
 				\label{fig:3_case_logout_expires}
 			\end{figure}
 		\item Pengalihan diakhiri di \url{https://studentportal.unpar.ac.id/} yaitu halaman depan Portal Akademik Mahasiswa (Gambar \ref{fig:3_case_logout}) 
 		\begin{figure}[H]
 				\centering
-				\includegraphics[scale=0.5]{Gambar/case-logout}
+				\includegraphics[scale=0.4]{Gambar/case-logout}
 				\caption{Pengalihan ke Halaman Depan Portal Akademik Mahasiswa} 
 				\label{fig:3_case_logout}
 			\end{figure}
@@ -553,7 +553,7 @@ Arsitektur Informatika Student Portal dapat dilihat pada Gambar \ref{fig:3_ars_p
 		
 \section{Analisis \textit{Use Case}}
 \subsection{Diagram \textit{Use Case}}
-Diagram \textit{use case} pada perangkat lunak yang akan dibangun hanya mengandung satu aktor, yaitu mahasiswa. Diagram \textit{use case} dapat dilihat pada gambar \ref{fig:3_usecase_diagram}. 
+Diagram \textit{use case} pada perangkat lunak yang akan dibangun hanya mengandung satu aktor, yaitu mahasiswa. Diagram \textit{use case} dapat dilihat pada Gambar \ref{fig:3_usecase_diagram}. 
 		\begin{figure}[H]
 			\centering
 			\includegraphics[scale=0.5]{Gambar/usecase-diagram}
@@ -621,7 +621,7 @@ Berdasarkan hasil analisis pada subbab \ref{sec:kebutuhan}, dari lima fitur yang
 
 \section{Analisis Kelas}
 \label{sec:analisis_kelas}
-Diagram kelas analisis untuk Informatika Student Portal ditunjukkan pada gambar \ref{fig:3_class_diagram}.
+Diagram kelas analisis untuk Informatika Student Portal ditunjukkan pada Gambar \ref{fig:3_class_diagram}.
 	\begin{figure}[H]
 			\centering
 			\includegraphics[scale=0.5]{Gambar/class-diagram}
