--- a/doc/DokumenSkripsi/Bab/bab5.tex
+++ b/doc/DokumenSkripsi/Bab/bab5.tex
@@ -25,7 +25,7 @@
 				Hasil implementasi berupa aplikasi berbasis web responsif yang menggunakan \textit{framework} Bootstrap\footnote{\url{http://getbootstrap.com/}, diakses 20 November 2015}. Aplikasi dapat diakses pada jaringan FTIS dengan URL \url{http://studentportal-if.ftis.unpar:9000}. Aplikasi Informatika Student Portal terdiri dari lima halaman antara lain:
 			\begin{enumerate}	 
 				\item\textbf{Halaman \textit{Login}}\\
-				Halaman \textit{login} digunakan pengguna untuk masuk ke dalam aplikasi. Pada halaman ini, pengguna dapat melakukan \textit{login} dengan mengisi \textit{email} pada kolom \textit{email} dan \textit{password} pada kolom \textit{password} kemudian mengklik tombol login. Tangkapan layar dari halaman \textit{login} dapat dilihat pada gambar \ref{fig:5_hasil_login}.
+				Halaman \textit{login} digunakan pengguna untuk masuk ke dalam aplikasi. Pada halaman ini, pengguna dapat melakukan \textit{login} dengan mengisi \textit{email} pada kolom \textit{email} dan \textit{password} pada kolom \textit{password} kemudian mengklik tombol login. Tangkapan layar dari halaman \textit{login} dapat dilihat pada Gambar \ref{fig:5_hasil_login}.
 					\begin{figure}[H]
 						\centering
 						\includegraphics[scale=0.34]{Gambar/hasil_login}
@@ -33,17 +33,17 @@
 						\label{fig:5_hasil_login}
 					\end{figure}
 					
-				\item\textbf{Halaman Utama}\\
-				Halaman utama merupakan halaman yang pertama kali dituju setelah melakukan \textit{login}. Halaman utama menampilkan identitas pengguna dan \textit{link} menuju kode sumber aplikasi Informatika Student Portal. Pada halaman ini juga terdapat \textit{sidebar menu} yang diperoleh dari \textit{template} StartBootstrap\footnote{\url{http://startbootstrap.com/}, diakses 20 November 2015}. \textit{Template} tersebut juga digunakan pada halaman prasyarat mata kuliah, jadwal kuliah, dan data akademik. Tangkapan layar dari halaman utama dapat dilihat pada gambar \ref{fig:5_hasil_utama}.
+				\item\textbf{Halaman \textit{Home}}\\
+				Halaman utama merupakan halaman yang pertama kali dituju setelah melakukan \textit{login}. Halaman utama menampilkan identitas pengguna dan \textit{link} menuju kode sumber aplikasi Informatika Student Portal. Pada halaman ini juga terdapat \textit{sidebar menu} yang diperoleh dari \textit{template} StartBootstrap\footnote{\url{http://startbootstrap.com/}, diakses 20 November 2015}. \textit{Template} tersebut juga digunakan pada halaman prasyarat mata kuliah, jadwal kuliah, dan data akademik. Tangkapan layar dari halaman utama dapat dilihat pada Gambar \ref{fig:5_hasil_utama}.
 					\begin{figure}[H]
 						\centering
 						\includegraphics[scale=0.34]{Gambar/hasil_home}
-						\caption{Halaman Utama} 
+						\caption{Halaman \textit{Home}} 
 						\label{fig:5_hasil_utama}
 					\end{figure}
 						
 				\item\textbf{Halaman Prasyarat Mata Kuliah}\\
-				Halaman ini menampilkan tabel prasyarat mata kuliah. Jika prasyarat mata kuliah tersedia, pengguna dapat mengklik kode mata kuliah, kemudian akan diarahkan ke kode sumber aturan prasyarat mata kuliah tersebut. Tangkapan layar dari halaman prasyarat mata kuliah dapat dilihat pada gambar \ref{fig:5_hasil_prasyarat}.
+				Halaman ini menampilkan tabel prasyarat mata kuliah. Jika prasyarat mata kuliah tersedia, pengguna dapat mengklik kode mata kuliah, kemudian akan diarahkan ke kode sumber aturan prasyarat mata kuliah tersebut. Tangkapan layar dari halaman prasyarat mata kuliah dapat dilihat pada Gambar \ref{fig:5_hasil_prasyarat}.
 					\begin{figure}[H]
 						\centering
 						\includegraphics[scale=0.34]{Gambar/hasil_prasyarat}
@@ -52,7 +52,7 @@
 					\end{figure}
 
 				\item\textbf{Halaman Jadwal Kuliah}\\
-				Halaman ini menampilkan jadwal kuliah yang tersusun dan terurut berdasarkan hari. Tangkapan layar dari halaman jadwal kuliah dapat dilihat pada gambar \ref{fig:5_hasil_jadwal}. Jika kode mata kuliah diklik, akan muncul \textit{popup} seperti pada gambar \ref{fig:5_hasil_jadwal_rinci} yang berisi rincian dari jadwal kuliah tersebut.
+				Halaman ini menampilkan jadwal kuliah yang tersusun dan terurut berdasarkan hari. Tangkapan layar dari halaman jadwal kuliah dapat dilihat pada Gambar \ref{fig:5_hasil_jadwal}. Jika kode mata kuliah diklik, akan muncul \textit{popup} seperti pada Gambar \ref{fig:5_hasil_jadwal_rinci} yang berisi rincian dari jadwal kuliah tersebut.
 				\begin{figure}[H]
 						\centering
 						\includegraphics[scale=0.34]{Gambar/hasil_jadwal}
@@ -68,7 +68,7 @@
 					\end{figure}
 					
 				\item\textbf{Halaman Data Akademik}\\
-				Halaman ini menampilkan data akademik berupa IPS dan IPK yang langsung berubah ketika nilai sudah muncul, sisa SKS, dan status kelulusan mata kuliah pilihan wajib. Tangkapan layar dari halaman data akademik dapat dilihat pada gambar \ref{fig:5_hasil_ringkasan}.
+				Halaman ini menampilkan data akademik berupa IPS dan IPK yang langsung berubah ketika nilai sudah muncul, sisa SKS, dan status kelulusan mata kuliah pilihan wajib. Tangkapan layar dari halaman data akademik dapat dilihat pada Gambar \ref{fig:5_hasil_ringkasan}.
 				\begin{figure}[H]
 						\centering
 						\includegraphics[scale=0.34]{Gambar/hasil_ringkasan}
