--- a/doc/DokumenSkripsi/data.tex
+++ b/doc/DokumenSkripsi/data.tex
@@ -195,7 +195,8 @@
 }
 
 \abstrakENG{
-
+	Portal Akademik Mahasiswa is a website that is intended for students in order to obtain information about academic activities. However, its features has still not support the academic needs of Informatics Engineering UNPAR's students. Therefore, the application made Informatika Student Portal.
+	Informatika Student Portal is a web-based application which made with Play Framework. The data which processed by Informatika Student Portal is taken directly from Portal Akademik Mahasiswa by exploiting web scraping which is implemented by jsoup.
 } 
 
 %=============================================================================
